= MagLev Change Log

== Changes for 23447  2010-05-04

* Fix Trac 729, 731/
* Implements Ruby IO#readpartial for Trac 730
* Fix hangs in various library/net rubyspecs.
* Disable use of linenoise if rlwrap is used.
* Several improvements to underlying GemStone 3.0 system

== Changes for 23416  2010-05-02

* Fix Trac 728, 729
* Adds display lineeditor, omit lineeditor options to topaz
* Several bugfixes to underlying GemStone 3.0 system 

== Changes for 23400  2010-04-29

* Fix RbConfig::CONFIG[ruby_version].  It was '1.8.7' and is now '1.8'.
  If you want to keep previously installed gems from $MAGLEV_HOMElib/maglev/gems/1.8.7
  move them to $MAGLEV_HOMElib/maglev/gems/1.8
* Fix Trac 715, 721, 722, 726, 727
* Implement Signal#trap
* Add rake task to optionally create 1 million people for indexing test
* Clean up a few rubyspec failures
* Updated zlib sources to  zlib v1.2.4
* More improvements in underlying GemStone 3.0 system

== Changes for 23351  2010-04-22

* Retagged RubySpecs to account for our switch to 1.8.7
* Fix Trac 716, 718, 719, 720
  Signal.trap will raise MNU for now.
* Optimize uses of ensure during Ruby bootstrap code
* Numerous improvements in underlying GemStone 3.0 system.

== Changes for 23275  2010-04-16

* Fix Trac 581, 683
* Switched indexing example from identity to equality indexes

== Changes for 23265  2010-04-14

* Fix Trac 707, 708, 709, 712, 713, 714
* More changes in underlying GemStone 3.0 system

== Changes for 23245  2010-04-12

* Removed workarounds for fixed bugs
* Fix Trac 150, 159, 404, 485, 490, 528, 710
* Several changes in underlying GemStone 3.0 system

== Changes for 23234  2010-04-09

* Fix Trac 700, 702, 703, 705
* Fix problems in Linenoise after ctrl-Z / fg
* Numerous improvements in underlying GemStone 3.0 system.
* Implement ObjectSpace#loaded_classes

== Changes for 23191  2010-04-06

* Added line editor support using Linenoise library
* Fix Trac 682, 695, 696 699 and part of 694